--- a/rock-paper-sisscor/index.html
+++ b/rock-paper-sisscor/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <center><h1 style="color: aquamarine; margin-top: 10vh;"> Rock Paper Scissor </h1></center>
+     <center><h1 style="color: aquamarine; "> Click👆 on ur option </h1></center>
+    
 <div id="container">
     <div id="pic1" class="pic" onclick="play"></div>
     <div id="pic2" class="pic"></div>
